# meal-planning

./: .gitignore  README.md
database/: initialization.sql  schema.sql
meal-planning/: CMakeLists.txt  columnItem.h  databaseconnection.cpp  databaseconnection.h  dropdownquerymodel.cpp  dropdownquerymodel.h  editedCell.h  main.cpp  meal_planning.cpp  meal_planning.h  meal_planning.ui  tablemodel.cpp  tablemodel.h  tableview.cpp  tableview.h
